--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "expo": "~53.0.7",
     "expo-font": "~13.3.1",
     "expo-image-picker": "~16.1.4",
-    "expo-linking": "~7.1.4",
-    "expo-router": "~5.0.5",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
     "firebase": "^11.7.1",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
@@ -32,7 +33,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "expo-constants": "~17.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
